Fix a few typos

--- a/notebooks/photometry/01.01.02-Background-estimation-XDF.ipynb
+++ b/notebooks/photometry/01.01.02-Background-estimation-XDF.ipynb
@@ -85,7 +85,7 @@
     "\n",
     "```python\n",
     "url = 'https://archive.stsci.edu/pub/hlsp/xdf hlsp_xdf_hst_acswfc-60mas_hudf_f435w_v1_sci.fits'\n",
-    "xdf_image = CCDData(url)\n",
+    "xdf_image = CCDData.read(url)\n",
     "```\n",
     "\n",
     "Since the data for the guide is meant to be downloaded in bulk before going through the guide, we read the image from disk here.\n"
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xdf_image = CCDData('hlsp_xdf_hst_acswfc-60mas_hudf_f435w_v1_sci.fits')"
+    "xdf_image = CCDData.read('hlsp_xdf_hst_acswfc-60mas_hudf_f435w_v1_sci.fits')"
    ]
   },
   {
@@ -302,7 +302,7 @@
     "full_mask = source_mask | xdf_image.mask\n",
     "\n",
     "# Compute the stats\n",
-    "source_mask_clip_mean, source_mask_clip_med, source_mask_clip_std  = sigma_clipped_stats(data, sigma=3, mask=full_mask)"
+    "source_mask_clip_mean, source_mask_clip_med, source_mask_clip_std  = sigma_clipped_stats(xdf_image.data, sigma=3, mask=full_mask)"
    ]
   },
   {
