--- a/notebooks/photometry/01.01.03-Background-estimation-FEDER.ipynb
+++ b/notebooks/photometry/01.01.03-Background-estimation-FEDER.ipynb
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ccd = CCDData.read('TIC_125489084.01-S001-R055-C001-ip.fit')\n",
+    "ccd = CCDData.read('TIC_125489084.01-S001-R055-C001-ip.fit.bz2')\n",
     "data = ccd.data\n",
     "header = ccd.header"
    ]
