Minor wording change

--- a/notebooks/photometry/01.01.02-Background-estimation-XDF.ipynb
+++ b/notebooks/photometry/01.01.02-Background-estimation-XDF.ipynb
@@ -425,7 +425,7 @@
     "\n",
     "Subtracting the scalar background does not have much effect here because the background is so close to zero.\n",
     "\n",
-    "One note about keeping the color scale the same, as we do in this example: if there is a significant scalar background then the effect of scalar background subtraction will be to simply make the entire image look darker. That will be illustrated in the next example."
+    "One note about keeping the color scale the same, as we do in this example: if there is a significant scalar background then the effect of scalar background subtraction will be to simply make the entire image look darker. That will be illustrated in the example in the next section of the guide."
    ]
   },
   {
