--- a/v/pdev/_sources/notebooks/photometry/01.02-IRAF-like-photutils.ipynb
+++ b/v/pdev/_sources/notebooks/photometry/01.02-IRAF-like-photutils.ipynb
@@ -4,26 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IRAF-like: photutils\n",
+    "# IRAF-like source detection using photutils\n",
     "\n",
-    "[photutils]() provides a couple of options for stellar source detection that will be familiar to users of IRAF. One is DAOFIND and the other is IRAF's starfind. The recommendation is to use DAOFIND because it is more general than starfind (e.g. it allows elliptical sources) and detects more sources. This notebook will focus on DAOFIND, implemented in photutils by the class `DAOStarFinder`.\n",
+    "[photutils]() provides a couple of options for stellar source detection that will be familiar to users of IRAF. One is DAOFIND and the other is IRAF's starfind. The recommendation is to use DAOFIND because it is more general than starfind (e.g. it allows elliptical sources) and detects more sources. There are examples of each method in the notebooks that follow.\n",
     "\n",
     "Both methods find sources above a threshold that is specified as a multiple of the background noise level, and both require that the background be subtracted from the image.\n",
     "\n",
-    "You can use any of the background subtraction methods that you like; often simply subtracting the median will be adequate, which is what we will do in this notebook. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## DAOPHOT"
+    "You can use any of the background subtraction methods that you like; often simply subtracting the median will be adequate. "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -37,9 +30,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
