--- a/v/pdev/_sources/notebooks/photometry/01.02.02-source-detection-XDF.ipynb
+++ b/v/pdev/_sources/notebooks/photometry/01.02.02-source-detection-XDF.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.style.use('../photutils_notebook_style.mplstyle')"
+    "plt.style.use('../../photutils_notebook_style.mplstyle')"
    ]
   },
   {
@@ -562,7 +562,7 @@
    "outputs": [],
    "source": [
     "sources_findpeaks = find_peaks(xdf_image.data, mask=xdf_image.mask, \n",
-    "                               threshold=20. * std, box_size=30, \n",
+    "                               threshold=20. * std, box_size=29, \n",
     "                               centroid_func=centroid_2dg)    \n",
     "print(sources_findpeaks)"
    ]
@@ -827,7 +827,7 @@
     "ax1.set_title('Original Data')\n",
     "\n",
     "# Plot the segmentation image\n",
-    "rand_cmap = make_random_cmap(random_state=12345)\n",
+    "rand_cmap = make_random_cmap(seed=12345)\n",
     "rand_cmap.set_under('black')\n",
     "segplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, segm), vmin=1, cmap=rand_cmap)\n",
     "ax2.set_xlabel('X (pixels)')\n",
@@ -858,9 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, axs = plt.subplots(3,3, figsize=(3, 3))\n",
@@ -918,9 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "catalog = source_properties(xdf_image.data, segm)\n",
@@ -1058,7 +1054,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1072,9 +1068,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
