Fix some imports in XDF source detection notebook

--- a/notebooks/photometry/01.02.02-source-detection-XDF.ipynb
+++ b/notebooks/photometry/01.02.02-source-detection-XDF.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.style.use('../../photutils_notebook_style.mplstyle')"
+    "plt.style.use('../photutils_notebook_style.mplstyle')"
    ]
   },
   {
@@ -191,14 +191,6 @@
    "metadata": {},
    "source": [
     "*Tip: Double-click on any inline plot to zoom in.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## Source Detection with `DAOStarFinder`"
    ]
   },
   {
@@ -551,7 +543,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from photutils import find_peaks\n",
+    "from photutils.detection import find_peaks\n",
     "from photutils.centroids import centroid_2dg"
    ]
   },
@@ -1068,7 +1060,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
