Draft text for simulated image notebook

--- a/notebooks/photometry/01.02.01-IRAF-like-simulated-image.ipynb
+++ b/notebooks/photometry/01.02.01-IRAF-like-simulated-image.ipynb
@@ -8,6 +8,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview\n",
+    "\n",
+    "IRAF provided a couple of ways, `starfind` and `daofind`, to detect *stellar* sources in an image. [photutils]() provides similar functionality via the [`DAOStarFinder`]() and [`IRAFStarFinder`]() objects\n",
+    "\n",
+    "This notebook will focus on [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) to emphasize that these options work well for detecting *stars* or other objects with a stellar profile. They do not work well for more extended objects.\n",
+    "\n",
+    "The next couple of notebooks will:\n",
+    "\n",
+    "+ apply these techniques to the Hubble Extreme Deep Field, to illustrate the differences between [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) and [`IRAFStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.IRAFStarFinder.html#photutils.detection.IRAFStarFinder), and to introduce another method of source detection,\n",
+    "+ apply the techniques to an image of stars from a ground-based telescope, and\n",
+    "+ illustrate other source detection techniques that work well for extended sources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulated image of galaxies and stars"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the first part of this notebook we consider an image that includes 100 sources, all with Gaussian profiles, some of which are fairly elongated. We used this image in the previous section about removing the background prior to source detection.\n",
+    "\n",
+    "As usual, we begin with some imports."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -15,10 +48,24 @@
    "source": [
     "from astropy.stats import sigma_clipped_stats, gaussian_sigma_to_fwhm\n",
     "from astropy.table import QTable\n",
-    "from astropy.visualization import simple_norm\n",
+    "from astropy.visualization import simple_norm, SqrtStretch\n",
     "from astropy.visualization.mpl_normalize import ImageNormalize\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "from photutils.aperture import CircularAperture, EllipticalAperture\n",
     "from photutils.datasets import make_100gaussians_image, make_gaussian_sources_image\n",
-    "from photutils.detection import find_peaks\n"
+    "from photutils.detection import find_peaks, DAOStarFinder\n",
+    "\n",
+    "plt.style.use('../photutils_notebook_style.mplstyle')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To begin, let's create and look the the image. We create an image normalization here that we will use for displaying the image throughout the notebook."
    ]
   },
   {
@@ -28,7 +75,27 @@
    "outputs": [],
    "source": [
     "data = make_100gaussians_image()\n",
-    "mean, median, std = sigma_clipped_stats(data, sigma=3.0)"
+    "norm = ImageNormalize(stretch=SqrtStretch())\n",
+    "plt.figure()\n",
+    "plt.imshow(data, cmap='Greys', origin='lower', norm=norm,\n",
+    "           interpolation='nearest')\n",
+    "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that some of these object are star-like -- the ones that are darkest are close to circular, for example. Others are very elongated and there are a variety of brightnesses among the objects."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estimate and subtract background \n",
+    "\n",
+    "The background must be subtracted from the image before the sources are detected. For simplicity we estimate the sigma-clipped mean, median and standard deviation of the pixels in the image. As discussed in the section on [background removal for source detection](), the sigma-clipped median gives a reasonable estimate of the background in many cases."
    ]
   },
   {
@@ -37,7 +104,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "median, std"
+    "mean, med, std = sigma_clipped_stats(data, sigma=3.0, maxiters=5)\n",
+    "data_subtracted = data - med"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Detect sources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The source detection itself is a couple of lines of code:"
    ]
   },
   {
@@ -46,9 +128,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from photutils.detection import DAOStarFinder\n",
-    "daofind = DAOStarFinder(fwhm=10.0, threshold=5.*std, ratio=.33, theta=0)  \n",
-    "sources = daofind(data - median)  \n",
+    "daofind = DAOStarFinder(fwhm=5.0, threshold=5.*std) \n",
+    "sources = daofind(data_subtracted)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are a variety of options you can select, detailed in the documentation for [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder). We only use two for now, specifying the typical full-width half-max (FWHM) of a source, and the threshold above which to conider something a source.\n",
+    "\n",
+    "A summary of the sources detected shows that [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) detect 41 sources, substantially fewer than the 100 that are in the image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Format the columns to only display two decimal points \n",
     "for col in sources.colnames:  \n",
     "    if col not in ('id', 'npix'):\n",
     "        sources[col].info.format = '%.2f'  # for consistent table output\n",
@@ -56,19 +155,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A plot showing the location of all of the detected sources helps illustrate why some of sources were missed, To display where sources were detected, we create a a set of photutils circular apertures and use its plot method to add a circle over each detected source."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from astropy.visualization import SqrtStretch\n",
-    "from astropy.visualization.mpl_normalize import ImageNormalize\n",
-    "from photutils.aperture import CircularAperture\n",
+    "# CircularAperture expects a particular format for input positions...\n",
     "positions = np.transpose((sources['xcentroid'], sources['ycentroid']))\n",
     "apertures = CircularAperture(positions, r=4.0)\n",
-    "norm = ImageNormalize(stretch=SqrtStretch())\n",
+    "\n",
+    "plt.figure()\n",
     "plt.imshow(data, cmap='Greys', origin='lower', norm=norm,\n",
     "           interpolation='nearest')\n",
     "apertures.plot(color='blue', lw=1.5, alpha=0.5);"
@@ -78,7 +181,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sources in image"
+    "It looks like the sources that were detected are those that were not too faint and not too elongaetd. \n",
+    "\n",
+    "Let's look at the properties of the sources in this image, and explore some of the settings in [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) to see how you could tune its parameters to detect a different subset of the sources."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sources in the image\n",
+    "\n",
+    "The sources in this image are generated using the code below, which was copied from the [photutils source code here](https://photutils.readthedocs.io/en/stable/_modules/photutils/datasets/make.html#make_100gaussians_image).\n",
+    "\n",
+    "The sources have a range of orientations, ellipticities, and widths. All of the sources are 2D Gaussians, with a FWHM ranging from roughly 3 to 15 pixels in each direction. The ratio of minor to major axis of the sources varies from 0.2 to 1.0."
    ]
   },
   {
@@ -113,12 +229,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "inp_sources.pprint(max_width=76)  \n"
+    "Let's look at the image again, with a marker around each input source. There is quite a bit of information packed into those markers:\n",
+    "\n",
+    "+ the shape of the marker matches the minor-to-major axis ratio\n",
+    "+ the major axis of the marker is related to the FWHM of the major axis\n",
+    "+ the thickness indicates the total flux of the source.\n"
    ]
   },
   {
@@ -128,25 +246,39 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(20, 10))\n",
-    "inp_positions = np.transpose((inp_sources['x_mean'], inp_sources['y_mean']))\n",
-    "inp_apertures = CircularAperture(inp_positions, r=10.0)\n",
-    "norm = ImageNormalize(stretch=SqrtStretch())\n",
+    "\n",
+    "# plot the image\n",
     "plt.imshow(data, cmap='Greys', origin='lower', norm=norm,\n",
     "           interpolation='nearest')\n",
-    "apertures.plot(color='blue', lw=1.5, alpha=0.5);\n",
-    "inp_apertures.plot(color='green', lw=1, alpha=0.5);\n",
+    "\n",
+    "# For each input source make an aperture for it\n",
+    "idx = 0\n",
     "for source in inp_sources:\n",
     "    minor = min(source['x_stddev'], source['y_stddev'])\n",
     "    major = max(source['x_stddev'], source['y_stddev'])\n",
-    "    plt.annotate(\n",
-    "        f\"{minor / major:.2f}\", \n",
-    "        #f\"{1 - source['x_stddev'] / source['y_stddev']:.2f}\", \n",
-    "        (source['x_mean'] + 5, source['y_mean'] + 5)\n",
-    "    )\n",
-    "    plt.annotate(\n",
-    "        f\"{(source['x_stddev'] + source['x_stddev'])/2 * gaussian_sigma_to_fwhm:.2f}\", \n",
-    "        (source['x_mean'] + 5, source['y_mean'] - 5)\n",
-    "    )\n",
+    "    ratio = minor / major\n",
+    "\n",
+    "    major_fwhm = major * gaussian_sigma_to_fwhm\n",
+    "\n",
+    "    # ap = EllipticalAperture((source['x_mean'], source['y_mean']), major, minor, theta=source['theta'])\n",
+    "    ap = EllipticalAperture((source['x_mean'], source['y_mean']), source['x_stddev'], source['y_stddev'], theta=source['theta'])\n",
+    "    \n",
+    "    # This should give linewidths of 1, 2, or 3 given the input fluxes\n",
+    "    line_width = source['flux'] // 250 - 1\n",
+    "    ap.plot(color='blue', lw=line_width)\n",
+    "\n",
+    "plt.title(\"Input sources\")\n",
+    "    # plt.annotate(str(idx), (source['x_mean'] + 5, source['y_mean'] + 5))\n",
+    "    # idx += 1\n",
+    "    # plt.annotate(\n",
+    "    #     f\"{minor / major:.2f}\", \n",
+    "    #     #f\"{1 - source['x_stddev'] / source['y_stddev']:.2f}\", \n",
+    "    #     (source['x_mean'] + 5, source['y_mean'] + 5)\n",
+    "    # )\n",
+    "    # plt.annotate(\n",
+    "    #     f\"{(source['x_stddev'] + source['x_stddev'])/2 * gaussian_sigma_to_fwhm:.2f}\", \n",
+    "    #     (source['x_mean'] + 5, source['y_mean'] - 5)\n",
+    "    # )\n",
     "    # plt.annotate(\n",
     "    #     f\"{source['amplitude']:.2f}\", \n",
     "    #     (source['x_mean'] + 5, source['y_mean'] - 5)\n",
