Update and add content

--- a/notebooks/photometry/01.01.02-Background-estimation-XDF.ipynb
+++ b/notebooks/photometry/01.01.02-Background-estimation-XDF.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "Background subtraction is essential for accurate photometric analysis of astronomical data like the XDF.\n",
     "\n",
-    "*The methods demonstrated here are available in narrative form within the `photutils.background` [documentation](http://photutils.readthedocs.io/en/stable/background.html).*"
+    "*The methods demonstrated here are also available in narrative from within the [`photutils.background` documentation](http://photutils.readthedocs.io/en/stable/background.html).*\n",
+    "\n",
+    "*The original authors of this notebook were Lauren Chambers and Erik Tollerud.*"
    ]
   },
   {
