--- a/notebooks/photometry/01.02.01-IRAF-like-simulated-image.ipynb
+++ b/notebooks/photometry/01.02.01-IRAF-like-simulated-image.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "data = make_100gaussians_image()\n",
     "norm = ImageNormalize(stretch=SqrtStretch())\n",
-    "plt.figure()\n",
+    "plt.figure(figsize=(10, 5))\n",
     "plt.imshow(data, cmap='Greys', origin='lower', norm=norm,\n",
     "           interpolation='nearest')\n",
     "plt.grid()"
@@ -128,7 +128,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "daofind = DAOStarFinder(fwhm=5.0, threshold=5.*std) \n",
+    "detect_fwhm = 5.0\n",
+    "daofind = DAOStarFinder(fwhm=detect_fwhm, threshold=5.*std) \n",
     "sources = daofind(data_subtracted)"
    ]
   },
@@ -169,12 +170,13 @@
    "source": [
     "# CircularAperture expects a particular format for input positions...\n",
     "positions = np.transpose((sources['xcentroid'], sources['ycentroid']))\n",
-    "apertures = CircularAperture(positions, r=4.0)\n",
+    "apertures = CircularAperture(positions, r=detect_fwhm / 2)\n",
     "\n",
-    "plt.figure()\n",
+    "plt.figure(figsize=(20, 10))\n",
     "plt.imshow(data, cmap='Greys', origin='lower', norm=norm,\n",
     "           interpolation='nearest')\n",
-    "apertures.plot(color='blue', lw=1.5, alpha=0.5);"
+    "apertures.plot(color='blue', lw=1, alpha=0.5);\n",
+    "plt.title(\"Sources detected by DAOStarFinder\")"
    ]
   },
   {
@@ -235,8 +237,8 @@
     "Let's look at the image again, with a marker around each input source. There is quite a bit of information packed into those markers:\n",
     "\n",
     "+ the shape of the marker matches the minor-to-major axis ratio\n",
-    "+ the major axis of the marker is related to the FWHM of the major axis\n",
-    "+ the thickness indicates the total flux of the source.\n"
+    "+ the major axis of the marker is the FWHM of the major axis\n",
+    "+ the thickness of the merker edge indicates the amplitude of the source.\n"
    ]
   },
   {
@@ -251,38 +253,39 @@
     "plt.imshow(data, cmap='Greys', origin='lower', norm=norm,\n",
     "           interpolation='nearest')\n",
     "\n",
-    "# For each input source make an aperture for it\n",
-    "idx = 0\n",
-    "for source in inp_sources:\n",
-    "    minor = min(source['x_stddev'], source['y_stddev'])\n",
-    "    major = max(source['x_stddev'], source['y_stddev'])\n",
-    "    ratio = minor / major\n",
-    "\n",
-    "    major_fwhm = major * gaussian_sigma_to_fwhm\n",
-    "\n",
-    "    # ap = EllipticalAperture((source['x_mean'], source['y_mean']), major, minor, theta=source['theta'])\n",
-    "    ap = EllipticalAperture((source['x_mean'], source['y_mean']), source['x_stddev'], source['y_stddev'], theta=source['theta'])\n",
+    "def plot_input_sources(ax=None, label_text=\"\"):\n",
+    "    if ax is None:\n",
+    "        ax = plt.gca()\n",
+    "        \n",
+    "    amplitudes = sorted(inp_sources['amplitude'])\n",
+    "    labeled = False\n",
+    "    for source in inp_sources:\n",
+    "        minor = min(source['x_stddev'], source['y_stddev'])\n",
+    "        major = max(source['x_stddev'], source['y_stddev'])\n",
+    "        ratio = minor / major\n",
     "    \n",
-    "    # This should give linewidths of 1, 2, or 3 given the input fluxes\n",
-    "    line_width = source['flux'] // 250 - 1\n",
-    "    ap.plot(color='blue', lw=line_width)\n",
+    "        major_fwhm = major * gaussian_sigma_to_fwhm\n",
+    "    \n",
+    "        # ap = EllipticalAperture((source['x_mean'], source['y_mean']), major, minor, theta=source['theta'])\n",
+    "        ap = EllipticalAperture((source['x_mean'], source['y_mean']), source['x_stddev'], source['y_stddev'], theta=source['theta'])\n",
+    "        \n",
+    "        # This should give linewidths of 1, 2, or 3 given the input fluxes\n",
+    "        line_width = source['flux'] // 250 - 1\n",
+    "    \n",
+    "        if source['amplitude'] > amplitudes[2 * len(amplitudes) // 3]:\n",
+    "            line_width = 3\n",
+    "        elif source['amplitude'] < amplitudes[len(amplitudes) // 3]:\n",
+    "            line_width = 1\n",
+    "        else:\n",
+    "            line_width = 2\n",
+    "        # Add a label to only the first aperture plotted, otherwise each aperture will be listed individually \n",
+    "        # in the legend.\n",
+    "        label_kw = {\"label\": label_text} if not labeled else {}\n",
+    "        labeled = True\n",
+    "        ap.plot(color='green', lw=line_width, alpha=0.5, ax=ax, **label_kw)\n",
     "\n",
-    "plt.title(\"Input sources\")\n",
-    "    # plt.annotate(str(idx), (source['x_mean'] + 5, source['y_mean'] + 5))\n",
-    "    # idx += 1\n",
-    "    # plt.annotate(\n",
-    "    #     f\"{minor / major:.2f}\", \n",
-    "    #     #f\"{1 - source['x_stddev'] / source['y_stddev']:.2f}\", \n",
-    "    #     (source['x_mean'] + 5, source['y_mean'] + 5)\n",
-    "    # )\n",
-    "    # plt.annotate(\n",
-    "    #     f\"{(source['x_stddev'] + source['x_stddev'])/2 * gaussian_sigma_to_fwhm:.2f}\", \n",
-    "    #     (source['x_mean'] + 5, source['y_mean'] - 5)\n",
-    "    # )\n",
-    "    # plt.annotate(\n",
-    "    #     f\"{source['amplitude']:.2f}\", \n",
-    "    #     (source['x_mean'] + 5, source['y_mean'] - 5)\n",
-    "    # )\n"
+    "plot_input_sources()\n",
+    "plt.title(\"All sources in the image\");"
    ]
   },
   {
@@ -291,59 +294,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "daofind_source = DAOStarFinder(fwhm=5.0, threshold=5.*std, xycoords=inp_positions)  \n",
-    "sources_source = daofind_source(data - median)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sources_source"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## `find_peaks`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "threshold = median + (5.0 * std)\n",
-    "tbl = find_peaks(data, threshold, box_size=11)\n",
-    "tbl['peak_value'].info.format = '%.8g'  # for consistent table output\n",
-    "tbl.pprint(max_width=76)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "positions = np.transpose((tbl['x_peak'], tbl['y_peak']))\n",
-    "apertures = CircularAperture(positions, r=5.0)\n",
-    "#norm = simple_norm(data, 'sqrt', percent=99.9)\n",
+    "plt.figure(figsize=(20, 10))\n",
+    "# plot the image\n",
     "plt.imshow(data, cmap='Greys', origin='lower', norm=norm,\n",
     "           interpolation='nearest')\n",
-    "apertures.plot(color='#0547f9', lw=1.5)\n",
-    "plt.xlim(0, data.shape[1] - 1)\n",
-    "plt.ylim(0, data.shape[0] - 1)"
+    "apertures.plot(color='blue', lw=1, alpha=1);\n",
+    "for idx, ap in enumerate(apertures):\n",
+    "    label_offset = 3\n",
+    "    plt.annotate(str(idx), (ap.positions[0] + label_offset, ap.positions[1] + label_offset))\n",
+    "plot_input_sources()\n",
+    "plt.title(\"All sources (green) and detected sources (blue)\\nlabeled by detected source number\");\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sources all theta=0"
+    "From this plot it seems that the sources detected are those that are:\n",
+    "\n",
+    "+ about the same size as the FWHM we input to the source finder (5 pixels in this case) -- see sources labeled 5 and 22, for example.\n",
+    "+ reasonably round *or* reasonably concentrated -- see source 33 for an example. That source is very elongated but also very compact.\n",
+    "\n",
+    "In some cases [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) finds *two* sources where there is really one. Sources 5 and 6 are a good example of this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### An exploration of some parameters of [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) \n",
+    "\n",
+    "We can test some of the assertions in the previous paragraph. As a couple of example of that, we can try to\n",
+    "\n",
+    "1. A lowe4r threshold in detection to try to detect the fainter sources in this test image. Below we will try a threshold of 3 times the standard deviation of the background instead of 5 times.\n",
+    "2. A ratio smaller than 1 to detect the more elongated sources. The ratio argument is the ratio of the semiminor to semimajor axis. Below we will try a ratio of 0.33.\n",
+    "\n",
+    "The code below begins with a function to do the plotting for this so that we can reuse that code for each plot."
    ]
   },
   {
@@ -352,105 +345,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flat_inp_sources = inp_sources.copy()\n",
-    "flat_inp_sources['theta'] = 0.0\n",
-    "minor_x = flat_inp_sources['x_stddev'] < flat_inp_sources['y_stddev']\n",
-    "majors = flat_inp_sources['x_stddev'].copy()\n",
-    "majors[minor_x] = flat_inp_sources['y_stddev'][minor_x]\n",
+    "def detect_sources_and_plot_apertures(data, fwhm=0, threshold_factor=5, ratio=1, ax=None, color='blue', label_text=\"\"):\n",
+    "    if ax is None:\n",
+    "        ax = plt.gca()\n",
+    "        \n",
+    "    daofind = DAOStarFinder(fwhm=detect_fwhm, threshold=threshold_factor * std, ratio=ratio) \n",
+    "    sources = daofind(data_subtracted)\n",
+    "    positions = np.transpose((sources['xcentroid'], sources['ycentroid']))\n",
+    "    apertures = CircularAperture(positions, r=detect_fwhm / 2)\n",
     "\n",
-    "minors = flat_inp_sources['y_stddev'].copy()\n",
-    "minors[minor_x] = flat_inp_sources['x_stddev'][minor_x]\n",
+    "    # Plot the first aperture with a label\n",
+    "    apertures[0].plot(color=color, lw=1, alpha=0.5, ax=ax, label=label_text)\n",
+    "    # Plot the rest without a label, otherwise each aperture gets its own label.\n",
+    "    apertures[1:].plot(color=color, lw=1, alpha=0.5, ax=ax)\n",
     "\n",
-    "flat_inp_sources['x_stddev'] = majors\n",
-    "flat_inp_sources['y_stddev'] = minors\n",
+    "fig, axes = plt.subplot_mosaic([['case 1', 'case 2']], figsize=[20, 10], sharey=True, tight_layout=True)\n",
     "\n",
-    "flat_inp_sources['y_stddev'] = flat_inp_sources['x_stddev']"
+    "for ax in axes.values():\n",
+    "    ax.imshow(data, cmap='Greys', origin='lower', norm=norm, interpolation='nearest')\n",
+    "    plot_input_sources(ax=ax, label_text=\"input source\")\n",
+    "\n",
+    "# The lower threshold case\n",
+    "thresh = 3\n",
+    "detect_sources_and_plot_apertures(data_subtracted, fwhm=detect_fwhm, threshold_factor=5, ratio=1, ax=axes['case 1'], color='blue', label_text=\"original parameters\")\n",
+    "detect_sources_and_plot_apertures(data_subtracted, fwhm=detect_fwhm, threshold_factor=thresh, ratio=1, ax=axes['case 1'], color='red', label_text=\"lower threshold\")\n",
+    "axes['case 1'].legend(loc=\"upper left\")\n",
+    "axes['case 1'].set_title(f\"Source detection with threshold {thresh:.1f}\")\n",
+    "\n",
+    "\n",
+    "# The small ratio case\n",
+    "ratio = 0.3\n",
+    "detect_sources_and_plot_apertures(data_subtracted, fwhm=detect_fwhm, threshold_factor=5, ratio=1, ax=axes['case 2'], color='blue', label_text=\"original parameters\")\n",
+    "detect_sources_and_plot_apertures(data_subtracted, fwhm=detect_fwhm, ratio=ratio, ax=axes['case 2'], color=\"red\", label_text=\"small ratio\")\n",
+    "axes['case 2'].legend(loc=\"upper left\")\n",
+    "axes['case 2'].set_title(f\"Source detection with ratio {ratio:.2f}\");"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "shape = (300, 500)\n",
-    "flat_data = make_gaussian_sources_image(shape, flat_inp_sources) + 5.0\n",
-    "\n",
-    "if True:\n",
-    "    rng = np.random.RandomState(12345)\n",
-    "    flat_data += rng.normal(loc=0.0, scale=2.0, size=shape)\n",
-    "\n"
+    "The plot on the left shows that lowering the detetion threshold does find more sources, but it also includes erroneous detections. The plot on right demonstrates that we can detect some (but not all) of the highly elongated objects by changing the `ratio` parameter in [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder)."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "plt.figure(figsize=(20, 10))\n",
+    "## Summary\n",
     "\n",
-    "plt.imshow(flat_data, cmap='Greys', origin='lower', norm=norm,\n",
-    "           interpolation='nearest')"
+    "The takeway from this section should be that the IRAF-like methods implemented in photutils are good at finding star-like sources. As we will see in the next couple of sections, the methods work very well for detecting stars or galaxiues that are small enough to look like stars. After that we will look at a couple of methods, local peak detection and image segmentation, that are better for detecting extended sources."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "daofind = DAOStarFinder(fwhm=10.0, threshold=5.*std, ratio=1, sharplo=0.2)  \n",
-    "flat_sources = daofind(flat_data - median) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 10))\n",
-    "\n",
-    "flat_positions = np.transpose((flat_sources['xcentroid'], flat_sources['ycentroid']))\n",
-    "flat_apertures = CircularAperture(flat_positions, r=4.0)\n",
-    "\n",
-    "plt.imshow(flat_data, cmap='Greys', origin='lower', norm=norm,\n",
-    "           interpolation='nearest')\n",
-    "flat_apertures.plot(color='blue', lw=1.5, alpha=0.5);\n",
-    "for source in flat_inp_sources:\n",
-    "    minor = min(source['x_stddev'], source['y_stddev'])\n",
-    "    major = max(source['x_stddev'], source['y_stddev'])\n",
-    "    plt.annotate(\n",
-    "        f\"{minor / major:.2f}\", \n",
-    "        #f\"{1 - source['x_stddev'] / source['y_stddev']:.2f}\", \n",
-    "        (source['x_mean'] + 5, source['y_mean'] + 5)\n",
-    "    )\n",
-    "    plt.annotate(\n",
-    "        f\"{source['amplitude']:.2f}\", \n",
-    "        (source['x_mean'] + 5, source['y_mean'] - 5)\n",
-    "    )\n",
-    "    plt.annotate(\n",
-    "        f\"{(source['x_stddev'] + source['x_stddev'])/2 * gaussian_sigma_to_fwhm:.2f}\", \n",
-    "        (source['x_mean'] + 5, source['y_mean'])\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flat_sources.colnames"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
