Finalize notebook draft

--- a/notebooks/photometry/01.02.03-SOurce-detection-FEDER.ipynb
+++ b/notebooks/photometry/01.02.03-SOurce-detection-FEDER.ipynb
@@ -234,7 +234,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This seems to have a reasonably good job finding stars in the image. Many of the fainter stars were not detected, though. you might at first be tempted to lower the threshold for detection. It turns out that that will report many more detections, but many of them will not actually be stars. A more effective approach is to increase the FWHM used by [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) instead, to something like 1.5 or 2 × the FWHM of the stars in the image.\n",
+    "This seems to have a reasonably good job finding stars in the image. Many of the fainter stars were not detected, though. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Improving the accuracy of source detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You might at first be tempted to lower the threshold for detection. It turns out that that will report many more detections, but many of them will not actually be stars. A more effective approach is to increase the FWHM used by [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) instead, to something like 1.5 or 2 × the FWHM of the stars in the image.\n",
     "\n",
     "A comparison of these three approaches is below."
    ]
@@ -259,34 +273,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "plt.figure(figsize=(10, 10))\n",
-    "\n",
-    "plt.imshow(np.ma.masked_where(ccd_2d_bkgdsub.mask, ccd_2d_bkgdsub), norm=norm_image_sub)\n",
-    "\n",
     "def plot_with_label(apertures, label_text=\"\", **kwd):\n",
     "    apertures[0].plot(label=label_text, **kwd)\n",
     "    apertures[1:].plot(**kwd)\n",
-    "    \n",
-    "plot_with_label(apertures, color=\"red\", label_text=\"Original parameters\")\n",
+    "\n",
+    "fig, axes = plt.subplot_mosaic([['lower threshold', 'bigger fwhm']], figsize=(12, 6), sharey=True, tight_layout=True)\n",
+    "\n",
+    "\n",
+    "for ax in axes.values():\n",
+    "    ax.imshow(np.ma.masked_where(ccd_2d_bkgdsub.mask, ccd_2d_bkgdsub), norm=norm_image_sub)\n",
+    "    plot_with_label(apertures, color=\"red\", label_text=\"Original parameters\", ax=ax)\n",
     "\n",
     "positions_fainter = np.transpose((sources_fainter['xcentroid'], sources_fainter['ycentroid']))\n",
-    "apertures_fainter = CircularAperture(positions_fainter, r=4 * fwhm)\n",
-    "plot_with_label(apertures_fainter, label_text=\"Lower detection threshold\", color=\"cyan\")\n",
+    "apertures_fainter = CircularAperture(positions_fainter, r=6 * fwhm)\n",
+    "plot_with_label(apertures_fainter, label_text=\"Lower detection threshold\", color=\"cyan\", ax=axes['lower threshold'])\n",
     "\n",
     "positions_bigger_fwhm = np.transpose((sources_bigger_fwhm['xcentroid'], sources_bigger_fwhm['ycentroid']))\n",
     "apertures_bigger_fwhm = CircularAperture(positions_bigger_fwhm, r=6 * fwhm)\n",
-    "# plot_with_label(apertures_bigger_fwhm, label_text=\"Larger detection FWHM\", color=\"yellow\")\n",
+    "plot_with_label(apertures_bigger_fwhm, label_text=\"Larger detection FWHM\", color=\"yellow\", ax=axes['bigger fwhm'])\n",
     "\n",
-    "plt.legend();\n"
+    "for ax in axes.values():\n",
+    "    ax.legend(loc=\"upper left\")\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Summary\n",
+    "\n",
+    "The [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) works very well for detecting sources in an image, though the parameters may need to be tuned a bit for your images. The previous notebook compared [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) and [`IRAFStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.IRAFStarFinder.html#photutils.detection.IRAFStarFinder). One of the important differences is that [`IRAFStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.IRAFStarFinder.html#photutils.detection.IRAFStarFinder) allows you to impoose a minimum separation of sources, which may be important in some situations."
+   ]
   }
  ],
  "metadata": {
