--- a/notebooks/photometry/01.02.02-IRAF-like-source-detection-XDF.ipynb
+++ b/notebooks/photometry/01.02.02-IRAF-like-source-detection-XDF.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Data for this notebook \n",
     "\n",
     "We will be manipulating Hubble eXtreme Deep Field (XDF) data, which was collected using the Advanced Camera for Surveys (ACS) on Hubble between 2002 and 2012. The image we use here is the result of 1.8 million seconds (500 hours!) of exposure time, and includes some of the faintest and most distant galaxies that had ever been observed. \n",
-    "\n",
-    "Background subtraction is essential for accurate photometric analysis of astronomical data like the XDF.\n",
     "\n",
     "*The methods demonstrated here are also available in narrative from within the [`photutils.detection` documentation](http://photutils.readthedocs.io/en/stable/detection.html).*\n",
     "\n",
@@ -136,19 +136,25 @@
     "# Set up the normalization and colormap\n",
     "norm_image = ImageNormalize(vmin=1e-4, vmax=5e-2, stretch=LogStretch(), clip=False)\n",
     "cmap = plt.get_cmap('viridis')\n",
-    "cmap.set_over(cmap.colors[-1])\n",
-    "cmap.set_under(cmap.colors[0])\n",
     "cmap.set_bad('white') # Show masked data as white\n",
-    "xdf_image_clipped = np.clip(xdf_image, 1e-4, None) # clip to plot with logarithmic stretch\n",
     "\n",
     "# Plot the data\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped),\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image),\n",
     "                      norm=norm_image, cmap=cmap)\n",
     "\n",
-    "# Define the colorbar and fix the labels\n",
-    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
-    "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
-    "cbar.ax.set_yticklabels(labels)\n",
+    "# Define the colorbar\n",
+    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator())\n",
+    "\n",
+    "def format_colorbar(bar):\n",
+    "    # Add minor tickmarks\n",
+    "    bar.ax.yaxis.set_minor_locator(LogLocator(subs=range(1, 10)))\n",
+    "\n",
+    "    # Force the labels to be displayed as powers of ten and only at exact powers of ten\n",
+    "    bar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
+    "    labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(bar.ax.get_yticks())]\n",
+    "    bar.ax.set_yticklabels(labels)\n",
+    "\n",
+    "format_colorbar(cbar)\n",
     "\n",
     "# Define labels\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
